--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,133 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header class="page-header">
+      <div class="page-header__menu">
+        <a class="page-header__logo">
+          <img class="page-header__logo-image" src="img/logo.png" width="102" height="83" alt="Логотип Седона">
+        </a>
+        <button class="page-header__button" type="button">Открыть меню</button>
+      </div>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+      <nav class="main-nav">
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a >Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a href="foto.html">Фото и видео</a>
+            </li>
+            <li class="site-list__item">
+              <a href="form.html">Форма отзыва</a>
+            </li>
+            <li class="site-list__item">
+              <a href="#">html academy</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <main class="page-main">
+      <section class="prewiew">
+        <div class="prewiew__landscape">
+          <img class="prewiew__image" src="https://via.placeholder.com/282x214"  width="282" height="214" alt="Надпись на фоне пейзажа добро пожаловать в седону">
+        </div>
+      </section>
+
+      <section class="advantages">
+        <h2 class="advantages__title section-title">Седона - небольшой городок в Аризоне заслуживающий большего!</h2>
+        <p class="advantages__main-description section-description">рассмотрим 5 причин, по которым седона круче, чем гранд коньон!</p>
+        <ul class="advantages__list">
+          <li class="advantages__item advantages__item--city">
+            <div class="advantages__description">
+              <h3 class="advantages__item-title">настоящий городок</h3>
+              <p class="advantages__number">№1</p>
+              <p class="advantages__expl">седона - не аттракцион для туристов, тат течет своя жизнь</p>
+            </div>
+            <img class="advantages__image" src="https://via.placeholder.com/320x260" width="320" height="260" alt="фото деревянной постройки с красной крушей, в правом нижнем углу куст, в левом верхнем развиваются флаги">
+            <ul class="advantages__list-description">
+              <li class="advantages__item-description">
+                <h4 class="advantages__title-description">жилье</h4>
+                <p class="advantages__expl-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+              </li>
+              <li class="advantages__item-description">
+                <h4 class="advantages__title-description">сувениры</h4>
+                <p class="advantages__expl-description">Не только китайского, но и местного производства!</p>
+              </li>
+              <li class="advantages__item-description">
+                <h4 class="advantages__title-description">еда</h4>
+                <p class="advantages__expl-description">Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!</p>
+              </li>
+            </ul>
+          </li>
+          <li class="advantages__item advantages__item--bridge">
+            <div class="advantages__description">
+              <h3 class="advantages__item-title">там есть мост дъявола</h3>
+              <p class="advantages__number">№2</p>
+              <p class="advantages__expl">да, по нему можно пройти! если вы осмелитесь конечно</p>
+            </div>
+            <img class="advantages__image" src="https://via.placeholder.com/320x260" width="320" height="260" alt="мост из красной скальной породы на фоне красных горных образований и зеленой долины">
+          </li>
+          <li class="advantages__item advantages__item--area">
+            <div class="advantages__description">
+              <h3 class="advantages__item-title">небольшая площадь</h3>
+              <p class="advantages__number">№3</p>
+              <p class="advantages__expl">все интересные места находятся очень близко</p>
+            </div>
+          </li>
+          <li class="advantages__item advantages__item--road">
+            <div class="advantages__description">
+              <h3 class="advantages__item-title">красивая дорога</h3>
+              <p class="advantages__number">№4</p>
+              <p class="advantages__expl">ехать в седону из лас-вегаса совсем не скучно!</p>
+            </div>
+          </li>
+          <li class="advantages__item advantages__item--tourists">
+            <div class="advantages__description">
+              <h3 class="advantages__title">мало туристов</h3>
+              <p class="advantages__number">№5</p>
+              <p class="advantages__expl">большинство едет в гранд каньон и толпится там</p>
+            </div>
+          </li>
+        </ul>
+      </section>
+
+      <section class="search-hotel">
+        <h2 class="search-hotel__title section-title">Заинтересовались?</h2>
+        <p class="search-hotel__discription section-description">укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <button class="search-hotel__button" type="button">найти гостиницу</button>
+      </section>
+    </main>
+
+    <footer class="page-footer">
+      <div class="page-footer__wrapper">
+        <b class="page-footer__hash-tag">#visitSEDONA</b>
+
+        <div class="page-footer__social social">
+          <ul class="social-list">
+            <li class="social-item">
+              <a class="socail-link social-link--twitter" href="#">твитер</a>
+            </li>
+            <li class="social-item">
+              <a class="socail-link social-link--facebook" href="https://www.facebook.com/htmlacademy">фейсбук</a>
+            </li>
+            <li class="social-item">
+              <a class="socail-link social-link--youtube" href="#">ютуб</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="page-footer__copyright copyright">
+          <p class="copyright__discription">разработано
+            <a class="copyrigth__link" href="https://htmlacademy.ru/intensive/adaptive">
+              <img class="copyrigth__image" src="img/htmlacademy.svg" width="27" height="34" alt="логотип htmlacademy">
+            </a>
+          </p>
+        </div>
+      </div>
+    </footer>
 
   </body>
 </html>
