Сделана верстка оставшихся модулей для мобильной версии

--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <div class="page-header__menu">
         <a class="page-header__logo">
-          <img class="page-header__logo-image" src="img/logo.png" width="102" height="83" alt="Логотип Седона">
+          <img class="page-header__logo-image" src="https://via.placeholder.com/102x83" width="102" height="83" alt="Логотип Седона">
         </a>
         <button class="page-header__button" type="button">Открыть меню</button>
       </div>
@@ -102,6 +102,9 @@
         <h2 class="search-hotel__title section-title">Заинтересовались?</h2>
         <p class="search-hotel__discription section-description">укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
         <button class="search-hotel__button" type="button">найти гостиницу</button>
+        <p class="search-hotel__wrapper-map">
+          <img class="searcy-hotel__image-map" src="https://via.placeholder.com/320x350" width="320" height="350" alt="карта аризоны с дорогой от финикса до флагстаффа">
+        </p>
       </section>
     </main>
 
