--- a/source/form.html
+++ b/source/form.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <div class="page-header__menu">
         <a class="page-header__logo">
-          <img class="page-header__logo-image" src="img/logo.png" width="102" height="83" alt="Логотип Седона">
+          <img class="page-header__logo-image" src="https://via.placeholder.com/102x83" width="102" height="83" alt="Логотип Седона">
         </a>
         <button class="page-header__button" type="button">Открыть меню</button>
       </div>
@@ -40,7 +40,7 @@
         </div>
       </section>
 
-      <!-- <section class="form">
+      <section class="form">
         <h2 class="form__title section-title">оставьте свой отзыв</h2>
         <p class="form__description section-description">помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
 
@@ -115,7 +115,7 @@
           </fieldset>
 
           <fieldset class="form__module">
-            <legend class="form__legent">опишите сови эмоции:</legend>
+            <legend class="form__legent">опишите свои эмоции:</legend>
             <p class="form__body">
               <textarea class="form__textarea" name="text" placeholder="Опишите подробно все свои восторги"></textarea>
             </p>
@@ -123,7 +123,7 @@
 
           <button type="submit">отправить отзыв</button>
         </form>
-      </section> -->
+      </section>
 
     </main>
 
