--- a/source/foto.html
+++ b/source/foto.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <div class="page-header__menu">
         <a class="page-header__logo">
-          <img class="page-header__logo-image" src="img/logo.png" width="102" height="83" alt="Логотип седона">
+          <img class="page-header__logo-image" src="https://via.placeholder.com/102x83" width="102" height="83" alt="Логотип седона">
         </a>
         <button class="page-header__button" type="button">Открыть меню</button>
       </div>
@@ -71,13 +71,13 @@
         </ul>
       </section>
 
-      <!-- <section class="video">
+      <section class="video">
         <h2 class="video__title section-title">все еще сомневаетесь?</h2>
         <p class="video__description section-description">смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
         <div class="video__video-player">
           <img class="video__image" src="https://via.placeholder.com/320x201"  width="320" height="201" alt="извивающаяся между гор дорога">
         </div>
-      </section> -->
+      </section>
 
     </main>
 
