--- a/source/foto.html
+++ b/source/foto.html
@@ -3,21 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
-      <div class="page-header__menu">
-        <a class="page-header__logo">
-          <img class="page-header__logo-image" src="https://via.placeholder.com/102x83" width="102" height="83" alt="Логотип седона">
-        </a>
-        <button class="page-header__button" type="button">Открыть меню</button>
-      </div>
-
       <nav class="main-nav">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
-              <a >Главная</a>
+              <a href="index.html">Главная</a>
             </li>
             <li class="site-list__item">
               <a href="foto.html">Фото и видео</a>
@@ -31,6 +25,13 @@
           </ul>
         </div>
       </nav>
+
+      <div class="page-header__menu">
+        <a class="page-header__logo">
+          <img class="page-header__logo-image" src="https://via.placeholder.com/102x83" width="102" height="83" alt="Логотип седона">
+        </a>
+        <button class="page-header__button" type="button">Открыть меню</button>
+      </div>
     </header>
 
     <main class="page-photo">
