--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,13 @@
   </head>
   <body>
     <header class="page-header">
+      <div class="page-header__menu">
+        <a class="page-header__logo">
+          <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип Седона">
+        </a>
+        <button class="page-header__button" type="button">Открыть меню</button>
+      </div>
+
       <nav class="main-nav">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
@@ -25,13 +32,6 @@
           </ul>
         </div>
       </nav>
-
-      <div class="page-header__menu">
-        <a class="page-header__logo">
-          <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип Седона">
-        </a>
-        <button class="page-header__button" type="button">Открыть меню</button>
-      </div>
     </header>
 
     <main class="page-main">
@@ -43,7 +43,7 @@
 
       <section class="advantages">
         <h2 class="advantages__title">Седона - небольшой городок в Аризоне заслуживающий большего!</h2>
-        <p class="advantages__main-description section-description">рассмотрим 5 причин, по которым седона круче, чем гранд коньон!</p>
+        <p class="advantages__main-description">рассмотрим 5 причин, по которым седона круче, чем гранд коньон!</p>
         <ul class="advantages__list">
           <li class="advantages__item advantages__item--city">
             <div class="advantages__description--blue-bg">
@@ -106,7 +106,7 @@
 
       <section class="search-hotel">
         <h2 class="search-hotel__title">Заинтересовались?</h2>
-        <p class="search-hotel__discription section-description">укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <p class="search-hotel__discription">укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
         <button class="search-hotel__button" type="button">найти гостиницу</button>
         <p class="search-hotel__wrapper-map">
           <img class="searcy-hotel__image-map" src="img/bg-map-mobile@1x.jpg" width="320" height="350" alt="карта аризоны с дорогой от финикса до флагстаффа">
