--- a/source/foto.html
+++ b/source/foto.html
@@ -42,29 +42,29 @@
       </section>
 
       <section class="gallery">
-        <h2 class="gallery__title section-title">фото и видео</h2>
-        <p class="gallery__description section-description">не можете решиться на путешествие из-за курса? фотографии помогут вам забыть о политике и экономике</p>
+        <h2 class="gallery__title">фото и видео</h2>
+        <p class="gallery__description">не можете решиться на путешествие из-за курса? фотографии помогут вам забыть о политике и экономике</p>
         <ul class="gallery__list">
           <li class="gallery__item">
-            <img class="prewiew-min__image" src="img/photo-sunset-mobile@1x.jpg"  width="280" height="280" alt="пейзаж дороги, уходящей в закат в стороны красных гор">
+            <img class="gallery__image gallery__image--spaces" src="img/photo-sunset-mobile@1x.jpg"  width="280" height="280" alt="пейзаж дороги, уходящей в закат в стороны красных гор">
             <h3 class="gallery__item-title">народные просторы</h3>
             <p class="gallery__signature">Автор фото: Борис</p>
             <b>1350</b>
           </li>
-          <li class="gallery__item">
-            <img class="prewiew-min__image" src="img/photo-cactus-mobile@1x.jpg"  width="280" height="280" alt="тонкие кактусы с отростками по кругу стебля, на которых расположены цветы на фоне красных гор">
+          <li class="gallery__item ">
+            <img class="gallery__image gallery__image--vegetation" src="img/photo-cactus-mobile@1x.jpg"  width="280" height="280" alt="тонкие кактусы с отростками по кругу стебля, на которых расположены цветы на фоне красных гор">
             <h3 class="gallery__item-title">местная растительность</h3>
             <p class="gallery__signature">Автор фото: Сергей</p>
             <b>143</b>
           </li>
           <li class="gallery__item">
-            <img class="prewiew-min__image" src="img/photo-roads-mobile@1x.jpg"  width="280" height="280" alt="горная извилистая дорога затерянная в в хвойных деревьях склона горы">
+            <img class="gallery__image gallery__image--road" src="img/photo-roads-mobile@1x.jpg"  width="280" height="280" alt="горная извилистая дорога затерянная в в хвойных деревьях склона горы">
             <h3 class="gallery__item-title">дорога на север</h3>
             <p class="gallery__signature">Автор фото: Петр</p>
             <b>96</b>
           </li>
-          <li class="gallery__item">
-            <img class="prewiew-min__image" src="img/main-bridge-mobile@1x.jpg"  width="280" height="280" alt="мост из красной скальной породы на фоне красных горных образований и зеленой долины">
+          <li class="gallery__item gallery__image--bridge">
+            <img class="gallery__image" src="img/main-bridge-mobile@1x.jpg"  width="280" height="280" alt="мост из красной скальной породы на фоне красных горных образований и зеленой долины">
             <h3 class="gallery__item-title">мост дъявола</h3>
             <p class="gallery__signature">Автор фото: Антон</p>
             <b>254</b>
@@ -73,10 +73,10 @@
       </section>
 
       <section class="video">
-        <h2 class="video__title section-title">все еще сомневаетесь?</h2>
-        <p class="video__description section-description">смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
+        <h2 class="video__title">все еще сомневаетесь?</h2>
+        <p class="video__description">смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
         <div class="video__video-player">
-          <img class="video__image" src="https://via.placeholder.com/320x201"  width="320" height="201" alt="извивающаяся между гор дорога">
+          <img class="video__image" src="img/video-mobile@1x.jpg"  width="320" height="201" alt="извивающаяся между гор дорога">
         </div>
       </section>
 
