Выполнена сетка для основных элементов страниц проекта

--- a/source/form.html
+++ b/source/form.html
@@ -20,7 +20,7 @@
             <li class="site-list__item site-list__item--active">
               <a class="site-list__link" href="index.html">Главная</a>
             </li>
-            <li class="site-list__item">
+            <li class="site-list__item site-list__item--left">
               <a class="site-list__link" href="foto.html">Фото и видео</a>
             </li>
             <li class="site-list__item">
@@ -39,6 +39,7 @@
         <div class="prewiew-min__landscape">
           <img class="prewiew-min__image" src="img/text-sedona.svg"  width="229" height="39" alt="Надпись седона на фоне горного пейзажа">
         </div>
+        <div class="prewiew-min__triangle"></div>
       </section>
 
       <section class="form">
