--- a/source/foto.html
+++ b/source/foto.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -18,15 +20,15 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
-              <a class="site-list__link" href="index.html">Главная</a>
+              <a class="site-list__link">Главная</a>
             </li>
-            <li class="site-list__item">
+            <li class="site-list__item site-list__item--left">
               <a class="site-list__link" href="foto.html">Фото и видео</a>
             </li>
-            <li class="site-list__item">
+            <li class="site-list__item site-list__item--right">
               <a class="site-list__link" href="form.html">Форма отзыва</a>
             </li>
-            <li class="site-list__item">
+            <li class="site-list__item site-list__item--right">
               <a class="site-list__link" href="#">html academy</a>
             </li>
           </ul>
@@ -39,35 +41,104 @@
         <div class="prewiew-min__landscape">
           <img class="prewiew-min__image" src="img/text-sedona.svg"  width="229" height="39" alt="Надпись седона на фоне горного пейзажа">
         </div>
+        <div class="prewiew-min__triangle"></div>
       </section>
 
       <section class="gallery">
         <h2 class="gallery__title">фото и видео</h2>
-        <p class="gallery__description">не можете решиться на путешествие из-за курса? фотографии помогут вам забыть о политике и экономике</p>
+        <p class="gallery__description">не можете решиться на путешествие из-за курса? фотографии помогут вам забыть о политике и экономике.</p>
         <ul class="gallery__list">
           <li class="gallery__item">
-            <img class="gallery__image gallery__image--spaces" src="img/photo-sunset-mobile@1x.jpg"  width="280" height="280" alt="пейзаж дороги, уходящей в закат в стороны красных гор">
-            <h3 class="gallery__item-title">народные просторы</h3>
-            <p class="gallery__signature">Автор фото: Борис</p>
-            <b>1350</b>
+            <figure class="gallery__wrapper gallery__wrapper--first">
+              <img class="gallery__image gallery__image--spaces gallery__image--first" src="img/photo-sunset-mobile@1x.jpg"  width="280" height="280" alt="пейзаж дороги, уходящей в закат в стороны красных гор">
+              <figcaption class="gallery__signature gallery__signature--first">
+                <div class="gallery__signature-wrapper">
+                  <h3 class="gallery__item-title">неродные просторы</h3>
+                  <p class="gallery__autor-signature">Автор фото: Борис</p>
+                </div>
+                <div class="gallery__likes-wrapper">
+                  <svg class="gallery__icon-likes"  version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                    <g id="Page-1">
+                      <g id="Core" transform="translate(-295.000000, -464.000000)">
+                        <g id="thumb-up" transform="translate(295.000000, 464.000000)">
+                          <path id="Shape" fill="#000000" d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
+                        </g>
+                      </g>
+                    </g>
+                  </svg>
+                  <b class="gallery__likes">1350</b>
+                </div>
+              </figcaption>
+            </figure>
           </li>
           <li class="gallery__item ">
-            <img class="gallery__image gallery__image--vegetation" src="img/photo-cactus-mobile@1x.jpg"  width="280" height="280" alt="тонкие кактусы с отростками по кругу стебля, на которых расположены цветы на фоне красных гор">
-            <h3 class="gallery__item-title">местная растительность</h3>
-            <p class="gallery__signature">Автор фото: Сергей</p>
-            <b>143</b>
+            <figure class="gallery__wrapper">
+              <img class="gallery__image gallery__image--vegetation" src="img/photo-cactus-mobile@1x.jpg"  width="280" height="280" alt="тонкие кактусы с отростками по кругу стебля, на которых расположены цветы на фоне красных гор">
+              <figcaption class="gallery__signature">
+                <div class="gallery__signature-wrapper">
+                  <h3 class="gallery__item-title">местная растительность</h3>
+                  <p class="gallery__autor-signature">Автор фото: Сергей</p>
+                </div>
+                <div class="gallery__likes-wrapper">
+                  <svg class="gallery__icon-likes"  version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                    <g id="Page-1">
+                      <g id="Core" transform="translate(-295.000000, -464.000000)">
+                        <g id="thumb-up" transform="translate(295.000000, 464.000000)">
+                          <path id="Shape" fill="#000000" d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
+                        </g>
+                      </g>
+                    </g>
+                  </svg>
+                  <b class="gallery__likes">143</b>
+                </div>
+              </figcaption>
+            </figure>
           </li>
           <li class="gallery__item">
-            <img class="gallery__image gallery__image--road" src="img/photo-roads-mobile@1x.jpg"  width="280" height="280" alt="горная извилистая дорога затерянная в в хвойных деревьях склона горы">
-            <h3 class="gallery__item-title">дорога на север</h3>
-            <p class="gallery__signature">Автор фото: Петр</p>
-            <b>96</b>
+            <figure class="gallery__wrapper">
+              <img class="gallery__image gallery__image--road" src="img/photo-roads-mobile@1x.jpg"  width="280" height="280" alt="горная извилистая дорога затерянная в в хвойных деревьях склона горы">
+              <figcaption class="gallery__signature">
+                <div class="gallery__signature-wrapper">
+                  <h3 class="gallery__item-title">дорога на север</h3>
+                  <p class="gallery__autor-signature">Автор фото: Петр</p>
+                </div>
+                <div class="gallery__likes-wrapper">
+                  <svg class="gallery__icon-likes" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                    <g id="Page-1">
+                      <g id="Core" transform="translate(-295.000000, -464.000000)">
+                        <g id="thumb-up" transform="translate(295.000000, 464.000000)">
+                          <path id="Shape" fill="#000000" d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
+                        </g>
+                      </g>
+                    </g>
+                  </svg>
+                  <b class="gallery__likes">96</b>
+                </div>
+              </figcaption>
+            </figure>
           </li>
-          <li class="gallery__item gallery__image--bridge">
-            <img class="gallery__image" src="img/main-bridge-mobile@1x.jpg"  width="280" height="280" alt="мост из красной скальной породы на фоне красных горных образований и зеленой долины">
-            <h3 class="gallery__item-title">мост дъявола</h3>
-            <p class="gallery__signature">Автор фото: Антон</p>
-            <b>254</b>
+          <li class="gallery__item">
+            <figure class="gallery__wrapper">
+              <img class="gallery__image gallery__image--bridge" src="img/main-bridge-mobile@1x.jpg"  width="280" height="280" alt="мост из красной скальной породы на фоне красных горных образований и зеленой долины">
+              <figcaption class="gallery__signature">
+                <div class="gallery__signature-wrapper">
+                  <h3 class="gallery__item-title">мост дъявола</h3>
+                  <p class="gallery__autor-signature">Автор фото: Антон</p>
+                </div>
+                <div class="gallery__likes-wrapper">
+                  <svg class="gallery__icon-likes" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                    <g id="Page-1">
+                      <g id="Core" transform="translate(-295.000000, -464.000000)">
+                        <g id="thumb-up" transform="translate(295.000000, 464.000000)">
+                          <path id="Shape" fill="#000000" d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
+                        </g>
+                      </g>
+                    </g>
+                  </svg>
+                  <b class="gallery__likes">254</b>
+                </div>
+              </figcaption>
+            </figure>
           </li>
         </ul>
       </section>
