--- a/source/index.html
+++ b/source/index.html
@@ -25,10 +25,10 @@
             <li class="site-list__item site-list__item--left">
               <a class="site-list__link" href="foto.html">Фото и видео</a>
             </li>
-            <li class="site-list__item site-list__item--right">
+            <li class="site-list__item">
               <a class="site-list__link" href="form.html">Форма отзыва</a>
             </li>
-            <li class="site-list__item site-list__item--right">
+            <li class="site-list__item">
               <a class="site-list__link" href="#">html academy</a>
             </li>
           </ul>
@@ -41,6 +41,7 @@
         <div class="prewiew__landscape">
           <img class="prewiew__image" src="img/text-sedona-index.svg"  width="282" height="214" alt="Надпись на фоне пейзажа добро пожаловать в седону">
         </div>
+        <div class="prewiew-min__triangle"></div>
       </section>
 
       <section class="advantages">
