--- a/source/index.html
+++ b/source/index.html
@@ -102,7 +102,7 @@
           </li>
 
           <li class="advantages__item advantages__item--bridge">
-            <div class="advantages__description advantages__description--blue-bg">
+            <div class="advantages__description advantages__description--blue-bg advantages__description--bridge">
               <h3 class="advantages__item-title">там есть мост дъявола</h3>
               <p class="advantages__number">№2</p>
               <p class="advantages__expl">да, по нему можно пройти! если вы осмелитесь конечно</p>
@@ -141,7 +141,7 @@
         <p class="search-hotel__discription">укажите предпологаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
         <button class="search-hotel__button" type="button">найти гостиницу</button>
         <p class="search-hotel__wrapper-map">
-          <img class="searcy-hotel__image-map" src="img/bg-map-mobile@1x.jpg" width="320" height="350" alt="карта аризоны с дорогой от финикса до флагстаффа">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d296430.35868902423!2d-111.86201075253815!3d34.827982251624654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1589463741580!5m2!1sru!2sru" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </p>
       </section>
     </main>
