--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="page-header page-header--nojs">
       <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип Седона">
+        <img src="img/logo-sedona-adaptive.svg" style="width: 100%">
       </a>
 
       <nav class="main-nav">
