--- a/source/foto.html
+++ b/source/foto.html
@@ -10,7 +10,11 @@
   <body>
     <header class="page-header page-header--nojs">
       <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип Седона">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+          <img src="img/logo-sedona-mobile.svg" alt="Логотип Седоны" width="100%">
+        </picture>
       </a>
 
       <nav class="main-nav">
