added adaptive grid to advantages block for mobile viewport

--- a/source/index.html
+++ b/source/index.html
@@ -58,7 +58,11 @@
                 <p class="advantages__number">№1</p>
                 <p class="advantages__expl">седона - не аттракцион для туристов, там течет своя жизнь</p>
               </div>
-              <img class="advantages__image" src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="фото деревянной постройки с красной крушей, в правом нижнем углу куст, в левом верхнем развиваются флаги">
+              <p class="advantages__image-wrapper">
+                <picture>
+                  <img class="advantages__image" src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg" alt="фото деревянной постройки с красной крушей, в правом нижнем углу куст, в левом верхнем развиваются флаги">
+                </picture>
+              </p>
             </div>
 
             <ul class="advantages__list-description">
@@ -111,7 +115,11 @@
               <p class="advantages__number">№2</p>
               <p class="advantages__expl">да, по нему можно пройти! если вы осмелитесь конечно</p>
             </div>
-            <img class="advantages__image" src="img/photo-bridge-mobile@1x.jpg" width="320" height="260" alt="мост из красной скальной породы на фоне красных горных образований и зеленой долины">
+            <p class="advantages__image-wrapper advantages__image-wrapper--bridge">
+              <picture>
+                <img class="advantages__image" src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg" width="320" height="260" alt="мост из красной скальной породы на фоне красных горных образований и зеленой долины">
+              </picture>
+            </p>
           </li>
         </ul>
 
