--- a/source/form.html
+++ b/source/form.html
@@ -7,21 +7,25 @@
   </head>
   <body>
     <header class="page-header page-header--nojs">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип Седона">
+      <a class="page-header__logo" href="index.html">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+          <img src="img/logo-sedona-mobile.svg" alt="Логотип Седоны" width="100%">
+        </picture>
       </a>
 
       <nav class="main-nav">
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
-              <a class="site-list__link" href="index.html">Главная</a>
+              <a class="site-list__link">Главная</a>
             </li>
             <li class="site-list__item site-list__item--left">
               <a class="site-list__link" href="foto.html">Фото и видео</a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link">Форма отзыва</a>
+              <a class="site-list__link" href="form.html">Форма отзыва</a>
             </li>
             <li class="site-list__item">
               <a class="site-list__link site-list__link--shadow" href="#">html academy</a>
