--- a/source/foto.html
+++ b/source/foto.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="page-header page-header--nojs">
-      <a class="page-header__logo">
+      <a class="page-header__logo" href="index.html">
         <picture>
           <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
           <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
@@ -52,7 +52,11 @@
         <ul class="gallery__list">
           <li class="gallery__item">
             <figure class="gallery__wrapper gallery__wrapper--first">
-              <img class="gallery__image gallery__image--spaces gallery__image--first" src="img/photo-sunset-mobile@1x.jpg"  width="280" height="280" alt="пейзаж дороги, уходящей в закат в стороны красных гор">
+              <picture>
+                <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-sunset-desctop@1x.jpg">
+                <img class="gallery__image gallery__image--spaces gallery__image--first" src="img/photo-sunset-mobile@1x.jpg"  width="280" height="280" alt="пейзаж дороги, уходящей в закат в стороны красных гор">
+              </picture>
               <figcaption class="gallery__signature gallery__signature--first">
                 <div class="gallery__signature-wrapper">
                   <h3 class="gallery__item-title">неродные просторы</h3>
@@ -121,7 +125,7 @@
           </li>
           <li class="gallery__item">
             <figure class="gallery__wrapper">
-              <img class="gallery__image gallery__image--bridge" src="img/main-bridge-mobile@1x.jpg"  width="280" height="280" alt="мост из красной скальной породы на фоне красных горных образований и зеленой долины">
+              <img class="gallery__image gallery__image--bridge" src="img/photo-bridge-mobile@1x.jpg"  width="280" height="280" alt="мост из красной скальной породы на фоне красных горных образований и зеленой долины">
               <figcaption class="gallery__signature">
                 <div class="gallery__signature-wrapper">
                   <h3 class="gallery__item-title">мост дъявола</h3>
