--- a/source/foto.html
+++ b/source/foto.html
@@ -53,9 +53,9 @@
           <li class="gallery__item">
             <figure class="gallery__wrapper gallery__wrapper--first">
               <picture>
-                <source media="(min-width: 1200px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
-                <img class="gallery__image gallery__image--spaces gallery__image--first" src="img/photo-sunset-mobile@1x.jpg" width="280px" height="280px" srcset="img/photo-sunset-mobile@1x.jpg 2x" alt="пейзаж дороги, уходящей в закат в стороны красных гор">
+                <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
+                <img class="gallery__image gallery__image--spaces gallery__image--first" src="img/photo-sunset-mobile@1x.jpg" srcset="img/photo-sunset-mobile@2x.jpg 2x" alt="пейзаж дороги, уходящей в закат в стороны красных гор">
               </picture>
               <figcaption class="gallery__signature gallery__signature--first">
                 <div class="gallery__signature-wrapper">
