fix name input field

--- a/source/form.html
+++ b/source/form.html
@@ -58,15 +58,15 @@
               <ul class="form__list form__list--name">
                 <li class="form__body">
                   <label class="form__label form__label--text" for="name">имя*:</label>
-                  <input class="form__input form__input--text" id="name" type="text" name="name" placeholder="Петр">
+                  <input class="form__input form__input--name" id="name" type="text" name="name" placeholder="Петр">
                 </li>
                 <li class="form__body">
                   <label class="form__label form__label--text" for="surname">фамилия*:</label>
-                  <input class="form__input form__input--text" id="surname" type="text" name="surname" placeholder="Иванов">
+                  <input class="form__input form__input--name" id="surname" type="text" name="surname" placeholder="Иванов">
                 </li>
                 <li class="form__body">
                   <label class= "form__label form__label--text" for="patronymic">отчество:</label>
-                  <input class="form__input form__input--text" id="patronymic" type="text" name="patronymic" placeholder="Александрович">
+                  <input class="form__input form__input--name" id="patronymic" type="text" name="patronymic" placeholder="Александрович">
                 </li>
               </ul>
             </fieldset>
