final fix form pagefinal of the form page fix and integration the leaflet maps on the main page

--- a/source/form.html
+++ b/source/form.html
@@ -77,11 +77,11 @@
               <legend class="form__legent form__legent--contacts">контактная информация:</legend>
               <ul class="form__list form__list--contacts">
                 <li class="form__body form__body--contacts">
-                  <label class="form__label form__label--contacts" for="tel">контактный телефон*:</label>
+                  <label class="form__label form__label--contacts form__label--tel" for="tel">контактный телефон*:</label>
                   <input class="form__input form__input--text form__input--tel" id="tel" type="tel" name="tel" placeholder="Введите телефон">
                 </li>
                 <li class="form__body form__body--contacts">
-                  <label class="form__label form__label--contacts" for="email">электронная почта*:</label>
+                  <label class="form__label form__label--contacts form__label--email" for="email">электронная почта*:</label>
                   <input class="form__input form__input--text form__input--email" id="email" type="email" name="email" placeholder="Введите e-mail">
                 </li>
               </ul>
