--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+    crossorigin=""></script>
 
   </head>
   <body>
@@ -157,9 +163,7 @@
         <h2 class="search-hotel__title">Заинтересовались?</h2>
         <p class="search-hotel__discription">укажите предпологаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
         <button class="search-hotel__button" type="button">найти гостиницу</button>
-        <p class="search-hotel__wrapper-map" id="map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.135657476916!2d-111.83015810420495!3d34.85444381570011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1594059259693!5m2!1sru!2sru" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-        </p>
+        <p class="search-hotel__wrapper-map" id="map"></p>
 
       </section>
     </main>
@@ -213,6 +217,7 @@
       </div>
     </footer>
 
+    <script src="js/index.js"></script>
     <script>
       var navMane = document.querySelector(".page-header");
       var navToggle = document.querySelector(".main-nav__toggle");
